[package]
name = "tree_simulators"
version = "0.1.0"
edition = "2021"
description = "generates possible branch layouts of minecraft tree farms and calculates the averages"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
rand = "0.9.2"
strum = "0.27.2"
strum_macros = "0.27.2"
